fixed whitespace bug after highlight search match in autocomplete

--- a/frontend/src/app/components/descriptors/descriptors.component.css
+++ b/frontend/src/app/components/descriptors/descriptors.component.css
@@ -1,4 +1,4 @@
-.example-chip-list {
-    width: 100%;
-  }
-  
+::ng-deep .selected {
+  color: #673ab7;
+  font-weight: bold;
+}
