--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -12,3 +12,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: #669966;
     background-color: white;
 }
+
+/* Usage:
+ * <button mat-raised-button color="success">Custom success</button>
+ */
+.mat-success {
+    color: #fff !important;
+    background-color: #28a745 !important; /* DeCS green: #669966 */
+}
+
+.mat-success[disabled] {
+    background-color: rgba(0, 0, 0, 0.12) !important;
+}
